Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 4.7.2
-
Fix Version/s: 4.7.4
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:
-
Environment:C7 + 92_201107 Subcon (020.034) + Split view SHA 29894f1b2f3bad0f5ee849460d066417407c37a5
-
Commits:e06d2bc80672776fc4fb0ca8a3861a4f9d493133
Description
Preconditions:
QGraphicsView includes some QWidget and scroll bar. View is on portrait orientation. Tested with
- with 'GraphicsViewTest' test application
- one QLineEdit on bottom/left position
Test steps:
1. Tap the QLineEdit text input field
-> split view is opened on portrait orientation, with qwerty virtual keyboard.
2. Change the view orientation from portrait to landscape.
Expected result:
Split view is open on landscape orientation and focused text widget is visible on split view screen area.
Actual result:
Split view is open on landscape orientation but focused text widget is not visible on split view screen area. Vertical scroll bar on split view is available but does not bring the focused text widget visible.
Note: if lock/unlock key is pressed, focused text edit is correctly visible on split view.
Attachments
Issue Links
- relates to
-
QTBUG-16572 Support partial input mode
-
- Closed
-