GraphicsViews: Focused widget is not visible after orientation change

Clean up previous fix a little bit, by merging if-statements.

Task-number: QTBUG-17576
Reviewed-by: Guoqing Zhang